[package]
name = "bilibili-lv6-hardcore"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/ghtz08/bilibili-lv6-hardcore"

[features]
test-adb = []

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
const_format = "0.2"
dotenvy = { version = "0.15" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.25", default-features = false }
log = { version = "0.4", features = ["std"] }
more-asserts = "0.3"
num-traits = "0.2"
rand = { version = "0.9", features = ["std_rng"] }
rand_distr = "0.5"
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "h2",
    "http2",
    "macos-system-configuration",
    "rustls-tls",
    "blocking",
] }
serde_json = "1.0"
