[package]
name = "bilibili-lv6-hardcore"
version = "0.1.2-dev"
edition = "2024"
repository = "https://github.com/ghtz08/bilibili-lv6-hardcore"

[features]
test-adb = []

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.6", features = ["derive", "env"] }
const_format = "0.2"
dotenvy = { version = "0.15" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.26", default-features = false }
log = { version = "0.4", features = ["std"] }
more-asserts = "0.3"
num-traits = "0.2"
rand = { version = "0.10", features = ["std_rng"] }
rand_distr = "0.6"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "charset",
    "http2",
    "json",
    "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
